--- a/portfolio.html
+++ b/portfolio.html
@@ -17,13 +17,13 @@
     <link rel="stylesheet" href="./css/portfolio.css" />
   </head>
   <body>
-    <h1>Страница портфолио</h1>
+    <h1 class="visually-hidden">Страница портфолио</h1>
 
     <!--Шапка сайта-->
     <header>
       <div class="container main-nav">
         <nav>
-          <a href="./" class="logo"> <span>Web</span>Studio</a>
+          <a href="./" class="logo"> <span>Web</span>Studio </a>
 
           <ul class="site-nav">
             <li class="item"><a href="./index.html">Студия</a></li>
@@ -35,10 +35,16 @@
         </nav>
 
         <ul class="contacts">
-          <li class="item icon-envelope">
+          <li class="item" aria-label="Имейл">
+            <svg class="icon-envelope" width="16" height="12">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="item icon-smartphone">
+          <li class="item" aria-label="Номер телефона">
+            <svg class="icon-smartphone" width="10" height="16">
+              <use href="./images/icons.svg#icon-smartphone"></use>
+            </svg>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -62,7 +68,7 @@
       <!--Перечень работ-->
       <section class="works">
         <div class="container">
-          <h2>Наши проекты</h2>
+          <h2 class="visually-hidden">Наши проекты</h2>
           <ul class="our-works">
             <li>
               <a>
@@ -203,10 +209,30 @@
         <div class="webs">
           <h3>присоединяйтесь</h3>
           <ul class="footer-webs-link">
-            <li><a class="link icon-instagram" href="instagram"></a></li>
-            <li><a class="link icon-twiter" href="twiter"></a></li>
-            <li><a class="link icon-facebook" href="facebook"></a></li>
-            <li><a class="link icon-linkedin" href="linkedin"></a></li>
+            <li>
+              <a class="link icon-instagram" href="instagram"></a>
+              <svg class="footer-links" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagramwhite"></use>
+              </svg>
+            </li>
+            <li>
+              <a class="link icon-twiter" href="twiter"></a>
+              <svg class="footer-links" width="20" height="20">
+                <use href="./images/icons.svg#icon-twitterwhite"></use>
+              </svg>
+            </li>
+            <li>
+              <a class="link icon-facebook" href="facebook"></a>
+              <svg class="footer-links" width="20" height="20">
+                <use href="./images/icons.svg#icon-facebookwhite"></use>
+              </svg>
+            </li>
+            <li>
+              <a class="link icon-linkedin" href="linkedin"></a>
+              <svg class="footer-links" width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedinwhite"></use>
+              </svg>
+            </li>
           </ul>
         </div>
       </div>
